@@ -1393,7 +1393,7 @@ public class TweetFragment extends Fragment {
 
                     replyButton.performClick();
                 } else {
-                    Toast.makeText(context, "Pwiccer failed to generate image!", Toast.LENGTH_SHORT).show();
+                    Toast.makeText(context, "Pwiccer failed to generate image! Is it installed?", Toast.LENGTH_SHORT).show();
                 }
         }
     }
